syntax = "proto3";

option java_multiple_files = true;
option java_outer_classname = "FreteGrpc";
option java_package =  "br.com.zup.edu.frete";
option objc_class_prefix = "HLW";

package br.com.zup.edu.frete;


service FreteService{
  rpc send (FreteRequest) returns (FreteResponse){}

  rpc calculaFrete(CalculaFreteRequest) returns (CalculaFreteResponse){}
}

message CalculaFreteRequest{
  string cep = 1 ;
}
message CalculaFreteResponse{
  string cep = 1;
  double valor = 2;
}

message FreteRequest {
  string nome =1;
}

message FreteResponse{
  string message = 1;
}
